@@ -2,6 +2,11 @@ Revelation changelog
 
 ---------------[ xxxx-xx-xx : 0.4.1 ]---------------
 
+2005-02-04  Erik Grinaker <erikg@codepoet.no>
+
+	* preference, password generator and search dialogs are no
+	longer modal
+
 2005-02-03  Erik Grinaker <erikg@codepoet.no>
 
 	* added option for autolocking file when inactive
